<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/gmaeOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/EndGamePlayers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/WinnerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/winner_text"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/WinnerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Winner's name here"
        android:textAlignment="center"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/ReturnToLobbyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_to_lobby"/>


</LinearLayout>